# faudio

./: .distfile  .gitignore  .gitmodules  CMakeLists.txt  COPYING  EVENTS  Makefile  Makefile.new  Makefile2  NAMES  NOTES  README  RELEASE  TODO  boot  bootstrap  clean.sh  finish.sh  flisp.hs  get-windows.sh  index.html  kern.sh  params.json  pre-release.sh  release-win.sh  release.sh  set-lib-references.sh  setup.sh  start-server.sh  test-rec.sh  test.flisp  test.sh  upload-docs.sh  winbuild.sh
bindings/haskell/: COPYING  README.md  ae.cabal  fae.cabal
bindings/haskell/src/: Fa.hs  Main.hs  Main_stub.h
bindings/haskell/src/Fa/: Action.hs  Atomic.hs  Audio.hs  Buffer.hs  Clock.hs  Dynamic.hs  Error.hs  Fa.hs  List.hs  Map.hs  Midi.hs  Pair.hs  Plot.hs  Ratio.hs  Set.hs  Signal.hs  Std.hs  String.hs  System.hs  Thread.hs  Time.hs
bindings/haskell/src/Sound/: Ae.hs  Fae.hs
examples/: CMakeLists.txt  fa_list_audio.c  fa_plug_midi.c  fae_default_midi.c  fae_echo_midi.c  fae_list_audio.c  fae_list_midi.c  fae_plug_midi.c  fae_sndfile.c  fae_template.c  mva.sh  sndfile.c
external_libraries/: CMakeLists.txt
external_libraries/asio/ASIOSDK2/common/: asio.lo
external_libraries/asio/ASIOSDK2/host/: asiodrivers.lo
fae/: CMakeLists.txt  audio.c  audio.d  buffer.c  core.c  dynamic.c  error.c  fae.c  graph.c  list.c  list.d  map.c  midi.c  pair.c  plot.c  ratio.c  set.c  signal.c  string.c  time.c  type.c
fae/atomic/: queue.c  ring_buffer.c  stack.c
fae/midi/: message.c
fae/plot/: gnuplot.c
shared/: CMakeLists.txt  action.c  action_internal.h  audio.c  audio.d  buffer.c  clock.c  core.c  dynamic.c  error.c  fa.c  fae.c  file_buffer.c  func_ref.c  graph.c  io.c  list.c  list.d  map.c  midi.c  midi.d  midi_pm.c  option.c  pair.c  plot.c  priority_queue.c  ratio.c  set.c  signal.c  signal.h  signal_internal.h  string.c  time.c  type.c  utility.c
shared/atomic/: queue.c  ring_buffer.c  stack.c
shared/device/: file.c
shared/io/: endian.c  ogg.c  sample_rate.c  template.c
shared/midi/: message.c  portmidi.c
shared/pair/: left.c
shared/plot/: gnuplot.c
shared/signal/: fluidsynth.c  play_buffer.c  vst.c
shared/string/: parson.c
src/: CMakeLists.txt  doremir.c  doremir.d  fae.c  fae.d  main.cc  parson.c  sclaudio.cc
src/doremir/: atomic.c  atomic_osx.c  atomic_win.c  audio_engine.c  buffer.c  device_osx.c  directory_osx.c  dispatcher.c  dynamic.c  error.c  event.c  graph.c  list.c  list.d  map.c  message.c  message.d  midi.c  pair.c  plot.c  plot_core_osx.m  plot_gnu.c  plot_osx.m  priority_queue.c  processor.c  ratio.c  scheduler.c  set.c  string.c  string_osx.c  thread.c  thread_osx.c  thread_win.c  time.c  type.c
src/doremir/atomic/: queue.c  ring_buffer.c  stack.c
src/doremir/device/: audio.c  audio.d  buffer.c  file.c  file.d  midi.c  midi.d
src/doremir/plot/: gnuplot.c
src/doremir/processor/: binary.c  const.c  id.c  loop.c  par.c  seq.c  split.c  unary.c  vm.c  vm.h  vmops.h
src/doremir/string/: trex.c  trex.h
src/fae/: audio.c  audio_engine.c  buffer.c  dynamic.c  error.c  event.c  fae.c  graph.c  list.c  list.d  map.c  message.c  message.d  midi.c  midi.d  midi_msg.c  pair.c  plot.c  priority_queue.c  processor.c  ratio.c  scheduler.c  set.c  signal.c  string.c  time.c  type.c
src/fae/atomic/: queue.c  ring_buffer.c  stack.c
src/fae/device/: audio.c  audio.d  buffer.c  file.c  file.d  midi.c
src/fae/plot/: gnuplot.c
src/fae/processor/: binary.c  delay.c  genOps.hs  loop.c  par.c  seq.c  split.c  unary.c  vm.c  vm.h
src/fae/string/: parson.h
src/platform/macosx/doremir/: atomic.c  device.c  directory.c  event.c  thread.c
src/platform/macosx/fae/: atomic.c  device.c  string.c  thread.c
src/platform/windows/doremir/: thread.c
src/platform/windows/fae/: atomic.c  thread.c
src/sclaudiox/: processor.cc  stream.cc
src/sclaudiox/device/: audio.cc  midi.cc  session.cc
src/sclaudiox/processor/plugin/: au.mm  au_nil.cc  nil.cc  vst2.cc
src/sclaudiox/processor/synth/: fluid.cc  fluid_nil.cc
src/sclaudiox/scheduling/: future.cc
src/sclaudiox/stream/device/: audio.cc  midi.cc
src/sclaudiox/util/: fib_heap.cc  immutable_list.cc  libc_workaround.cc  symbol.cc
test/: #main.lisp#  .#main.lisp  CMakeLists.txt  MsgExamples.js  example.json  example2.json  main.c  main.cc  main.lisp  proc.dot  setup.lisp  test.cc  test.h
test/atomic/: atomic.cc
test/audio_concept/: abortable.cc  addressable.cc  receiver.cc  startable.cc
test/audio_dispatcher/: any.cc
test/audio_processor/: constant.cc  identity.cc  parallel.cc  raw.cc  sequence.cc  split.cc  unary.cc
test/audio_types/: alignment.cc  dynamic.cc  size.cc
test/audio_utility/: raw.cc
test/concept/: copyable.cc  lower_bound.cc  monoid.cc  moveable.cc  semigroup.cc  splittable.cc
test/future/: future.cc  wakeup_service.cc
test/immutable/: list.cc
test/improving/: improving.cc
test/logging/: logging.cc
test/plot/AudioEnginePlotTest/AudioEnginePlotTest/: AEAppDelegate.h  AEAppDelegate.m  AudioEnginePlotTest-Info.plist  AudioEnginePlotTest-Prefix.pch  main.m
test/plot/AudioEnginePlotTest/AudioEnginePlotTest.xcodeproj/: project.pbxproj
test/thread/: thread.cc
test/utility/: chase.cc  raw.cc  reserve_ptr.cc
teststd/: .gitignore  CMakeLists.txt  Makefile  array.cc  atomic.cc  atomic.h  atomic_impl.h  bind.cc  constexpr.cc  exception_ptr.cc  extern_template.cc  iconv_cpp.h  initializer_list.cc  lambda  lambda.cc  logging.cc  smart_pointers.cc  thread.cc  thread.h  type_traits.cc  unicode.cc
tools/: CMakeLists.txt  ae_echo_midi.c  ae_plug_midi.c  clicks.c  common.h  custom.c  dae_list_audio.c  dae_list_midi.c  default_midi.c  echo_midi.c  erik.c  fae_echo_midi.c  fae_list_audio.c  fae_list_midi.c  fae_plug_midi.c  faudio.c  fifo.c  generate_audio_types.cc  impulses.c  io_simple_filter.c  left.c  level.c  lift.c  list_audio.c  list_midi.c  macros.c  nrt.c  options.c  play.c  play_streaming.c  plot_file.c  plug_audio.c  plug_midi.c  print_file_format.c  read_audio.c  record.c  record_streaming.c  server-globals.h  server-playback.h  server-sequence.h  (+20 more)
(+11072 files in other folders)
